syntax = "proto3";
package model;
option go_package = "github.com/simimpact/srsim/pkg/model";

message Version {
  string major = 1 [ json_name = "major" ];
  string minor = 2 [ json_name = "minor" ];
}

message SimulationResult {
  Version schema_version = 1 [ json_name = "schema_version" ];
  optional string sim_version = 2 [ json_name = "sim_version" ];
  optional bool modified = 3 [json_name="modified"];
  string build_date = 4 [json_name="build_date"];

  SimulationStatistics statistics = 5 [json_name="statistics"];
}

message IterationResult {
  map<int32, string> target_id_mapping = 1 [json_name="target_id_mapping"];
}

message SimulationStatistics {

}

message OverviewStats {
  optional double min = 1 [json_name="min"];
  optional double max = 2 [json_name="max"];
  optional double mean = 3 [json_name="mean"];
  optional double SD = 4 [json_name="sd"];

  optional double Q1 = 5 [json_name="q1"];
  optional double Q2 = 6 [json_name="q2"];
  optional double Q3 = 7 [json_name="q3"];

  repeated uint32 hist = 8 [json_name="histogram"];
}

message DescriptiveStats {
  optional double min = 1 [json_name="min"];
  optional double max = 2 [json_name="max"];
  optional double mean = 3 [json_name="mean"];
  optional double SD = 4 [json_name="sd"];
}